# Community-Structure-Based-Virality-Prediction

./: .gitignore  README.md  __init__.py  cascades.py  collect_cascades.py  config.py  data_io.py  features.py  gnn.py  graphs.py  graphviz.sh  logger.py  main.py  models_ml.py  pyproject.toml  reddit_client.py  run_gnn.py  run_pipeline.py  visuals.py
Training/: run_gnn.py  run_pipeline.py
data_util/: collect_cascades.py  collect_cascades_pushshift.py
features/: features.py
models/: gnn.py  models_ml.py
notebooks/: Experiments.ipynb
util/: __init__.py
viz/: visuals.py
