[project]
name = "microviral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "graphviz>=0.21",
    "load>=1.0.14",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "pandas>=2.3.3",
    "praw>=7.8.1",
    "pygraphviz>=1.11",
    "python-louvain>=0.16",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]
